[tool.poetry]
name = "first-lesson"
version = "0.1.0"
description = ""
authors = ["jendox <jendox1985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
editorconfig-checker = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
